<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="weather"
            type="com.example.minimalweather.model.CurrentWeather" />
        
        <variable
            name="listener"
            type="com.example.minimalweather.ui.main.WeatherItemListener" />

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardElevation="8dp"
        card_view:cardCornerRadius="16dp"
        android:layout_margin="8dp"
        app:backgroundColor="@{weather}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/lo"
                android:textColor="#ADFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="@+id/tv_low"
                card_view:layout_constraintEnd_toStartOf="@+id/tv_low" />

            <TextView
                android:id="@+id/tv_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginBottom="16dp"
                app:tempTextValue="@{weather.weatherData.minTemp}"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="@+id/textView5" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@{weather.weatherData.locationName}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@{weather.weatherData.country}"
                android:textColor="#ADFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:layout_constraintStart_toStartOf="@+id/tv_location"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_location" />

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                app:tempTextValue="@{weather.weatherData.temp}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textSize="52sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_country" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="23dp"
                android:layout_height="45dp"
                android:text="@string/deg"
                android:textColor="#FFFFFF"
                android:textSize="52sp"
                android:textStyle="bold"
                card_view:layout_constraintStart_toEndOf="@+id/tv_temp"
                card_view:layout_constraintTop_toTopOf="@+id/tv_temp" />

            <com.github.pwittchen.weathericonview.WeatherIconView
                android:id="@+id/weatherview"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginEnd="16dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="@+id/tv_location"
                custom:weatherIconColor="@android:color/white"
                app:weatherIcon="@{weather}"
                custom:weatherIconSize="82" />

            <TextView
                android:id="@+id/tv_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:tempTextValue="@{weather.weatherData.maxTemp}"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toTopOf="@+id/tv_low"
                card_view:layout_constraintStart_toStartOf="@+id/tv_low" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/hi"
                android:textColor="#ADFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:layout_constraintEnd_toStartOf="@+id/tv_high"
                card_view:layout_constraintTop_toTopOf="@+id/tv_high" />

            <ImageView
                android:id="@+id/current_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:visibility="invisible"
                card_view:layout_constraintBottom_toBottomOf="@+id/tv_location"
                card_view:layout_constraintStart_toEndOf="@+id/tv_location"
                card_view:layout_constraintTop_toTopOf="@+id/tv_location"
                card_view:layout_constraintVertical_bias="0.74"
                custom:srcCompat="@drawable/ic_round_pin"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>